# Estimation-of-berthing-angle

./: README.md
lxd_berthing_angle/: CMakeLists.txt  package.xml
lxd_berthing_angle/data/lidar_0_360/: readme.txt
lxd_berthing_angle/src/: Berthing_angle_calculation.h  Cutting_point_cloud.h  Outlier_noise_filtering.h  lxd_berthing_angle.cpp
